--- a/index.html
+++ b/index.html
@@ -426,7 +426,15 @@
 </td>
                     <td><a>Sign Up</a></td>
                   </tr>
-                
+                <tr>
+                    <td class="particulier">DEUGOUE DJIALEU MARINA NICAISE</td>
+                    <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
+                    <td> IUG</td>
+                    <td> GL</td>
+                    <td>~ 0
+</td>
+                    <td><a>Sign Up</a></td>
+                  </tr>
                   <tr>
                     <td class="particulier">DIN GASTON RYAN</td>
                     <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
