--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
                   </tr>
                 
                   <tr>
-                    <td class="particulier">DONGMO YIMELE JAHSHAUVE</td>
+                    <td class="particulier">DONGMO YIMELE JAHSAUVE</td>
                     <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
                     <td> INSAM</td>
                     <td> GL</td>
