--- a/index.html
+++ b/index.html
@@ -217,6 +217,15 @@
 </td>
                     <td><a>Sign Up</a></td>
                   </tr>
+                 <tr>
+                    <td class="particulier">ANGOUANDE IDA</td>
+                    <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
+                    <td> IAI</td>
+                    <td> RESEAU</td>
+                    <td>~ 0
+</td>
+                    <td><a>Sign Up</a></td>
+                  </tr>
                   <tr>
                     <td class="particulier">AYABA KONO EDOUARD</td>
                     <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
