--- a/index.html
+++ b/index.html
@@ -1602,7 +1602,15 @@
 </td>
                     <td><a>Sign Up</a></td>
                   </tr>
-                
+                 <tr>
+                    <td class="particulier">NDONZOU EKWALLA SOSTHENE SOREL EDDY</td>
+                    <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
+                    <td> IUC</td>
+                    <td> RESEAU</td>
+                    <td>~ 0
+</td>
+                    <td><a>Sign Up</a></td>
+                  </tr>
                   <tr>
                     <td class="particulier">NGA ONDOBO ELISABETH DIVINE</td>
                     <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
