--- a/index.html
+++ b/index.html
@@ -2010,7 +2010,7 @@
                     <td><a>Sign Up</a></td>
                   </tr>
                  <tr>
-                    <td class="particulier">SIMO PANMOE ALBERTO</td>
+                    <td class="particulier">SIMO FANMOE ALBERTO</td>
                     <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
                     <td> IUG</td>
                     <td> IIA</td>
