--- a/index.html
+++ b/index.html
@@ -1869,7 +1869,15 @@
 </td>
                     <td><a>Sign Up</a></td>
                   </tr>
-                
+                <tr>
+                    <td class="particulier">NZIE NSANGOU OUSSENA BELLA</td>
+                    <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
+                    <td> EST LASALLE</td>
+                    <td> IIA</td>
+                    <td>~ 0
+</td>
+                    <td><a>Sign Up</a></td>
+                  </tr>
                   <tr>
                     <td class="particulier">OBAMA NDI LARISSA HINDRID</td>
                     <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
