--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <tr>
                     <td class="particulier">BASSOM Rose Camille</td>
                     <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
-                    <td> IUG</td>
+                    <td> EST LA SALLE</td>
                     <td> IIA</td>
                     <td>~ 0
 </td>
