--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div id="control-level" class="fixed-button"><button id="optl1">stagelink l1 </button> <button id="optl3">stagelink
           l3</button></div>
       <marquee> Bienvenue au programme StageLink L1. Le programme de formation et d'immersion dans le monde professionnel. Vous 
-        demarrerez Mardi le 1er juillet 2025. MAXIMUM D'EXPERIENCE A TOUS !
+        demarrerez Lundi le 14 juillet 2025. MAXIMUM D'EXPERIENCE A TOUS !
       </marquee>
       <section class="page" id="page1">
         <div id="presentation">
@@ -52,7 +52,7 @@
               par eux-même de la boucle de l'inemployabilité.
               <br> Incompétence -&gt; Manque de Stage -&gt; Manque d'expérience -&gt; Chomage -&gt; Incompétence
               <br> <b>Pour continuer à exister et à se developper afin de mieux aider, StageLink à toujours eu besoin de
-                soutien. Tout les étudiants sélectionnés au programme doivent soutenir à hauteur de 40 000 FCFA. Et bénéficier
+                soutien. Tout les étudiants sélectionnés au programme doivent soutenir à hauteur de 25 000 FCFA. Et bénéficier
                 des avantages suivants:
               </b>
               <ol><b>
@@ -72,7 +72,7 @@
               <b>Chers parents,</b>
               <br><b>StageLink</b> est un ensemble d'entreprises (30) qui ont pour but d'encadrer les jeunes étudiants les plus motivés à avoir un ensemble d'outils indispensables pour le monde professionnel, à savoir : les compétences réellement recherchées par les employeurs, la culture d'entreprises, les techniques d'intégration ...
               <br> En cette année 2025, le programme se donne l'objectif de donner un <b>contrat de travail (CDD)</b> à 50 étudiants les plus talentueux dans les entreprises partenaires et vise à en faire davantage au fil du temps.
-              <br> Mais pour garantir une progression permanente dans le temps, le programme nécessite néanmoins quelques fonds dont le soutien des profils sélectionnés aidera à alléger certains coûts. Les profils devront contribuer à hauteur de <b>60 000 FCFA</b> pour bénéficier des avantages suivants :
+              <br> Mais pour garantir une progression permanente dans le temps, le programme nécessite néanmoins quelques fonds dont le soutien des profils sélectionnés aidera à alléger certains coûts. Les profils devront contribuer à hauteur de <b>45 000 FCFA</b> pour bénéficier des avantages suivants :
               <ol>
                   <li>Formation pratique (3 mois)</li>
                   <li>Stage (3 mois)</li>
@@ -85,8 +85,8 @@
               <br> La contribution des profils sera gérée comme suit :
               <ul>
                   <li>Inscription : 10 000 FCFA</li>
-                  <li>Formation pratique : 30 000 FCFA</li>
-                  <li>Frais de concours pour la zone delta : 20 000 FCFA</li>
+                  <li>Formation pratique : 20 000 FCFA</li>
+                  <li>Frais de concours pour la zone delta : 15 000 FCFA</li>
               </ul>
               <br> <b>NB :</b> Le programme StageLink met les étudiants sur le chemin, mais c'est à l'étudiant que revient la responsabilité de se démarquer !
             </div>
