--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   <li>Visite des entreprises du métier</li>
                   <li>Pré-soutenance</li>
                   <li>Soutenance de fin</li>
-                  <li>Assistance rapport pour le BTS</li>
+                  <li>Assistance rapport pour le DUT ou BTS</li>
 
                 </b>
                 <br> MERCI POUR LE SOUTIEN ET LA BONNE COMPREHENSION!
