--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <div id="control-level" class="fixed-button"><button id="optl1">stagelink l1 </button> <button id="optl3">stagelink
           l3</button></div>
       <marquee> Bienvenue au programme StageLink L3. Le programme d'immersion dans le monde professionnel. Vous 
-        demarrerez lundi le 17 février 2025. MAXIMUM D'EXPERIENCE A TOUS !
+        demarrerez lundi le 14 Juillet 2025. MAXIMUM D'EXPERIENCE A TOUS !
       </marquee>
       <section class="page" id="page1">
         <div id="presentation">
