--- a/index.html
+++ b/index.html
@@ -1715,7 +1715,14 @@
                     <td>~ 0</td>
                     <td><a>Sign Up</a></td>
                   </tr>
-                
+                 <tr>
+                    <td class="particulier">MOUAFO NGUEDA ADRIEN</td>
+                    <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
+                    <td> GL</td>
+                    <td> UD</td>
+                    <td>~ 0</td>
+                    <td><a>Sign Up</a></td>
+                  </tr>
                   <tr>
                     <td class="particulier">MOUCHILI CHINMOUN NGOUCHEME ABOUBAKAR</td>
                     <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
