--- a/index.html
+++ b/index.html
@@ -1207,7 +1207,7 @@
                     <td>~ 0</td>
                     <td><a>Sign Up</a></td>
                   </tr><tr>
-                    <td class="particulier">MAFFO FRANCE NE STELLA</td>
+                    <td class="particulier">MAFFO FRANCINE STELLA</td>
                     <td><img src="images/dollar.png" alt="Votre Logo"> Standard Student</td>
                     <td> IUT</td>
                     <td> GEII</td>
