--- a/index.html
+++ b/index.html
@@ -1055,8 +1055,8 @@
                   </tr><tr>
   <td class="particulier">KENGNE NOUMSSI DARIANE</td>
   <td><img src="images/dollar.png" alt="Votre Logo">Standard Student</td>
-  <td>StageLink</td>
-  <td>StageLink</td>
+  <td>IUG</td>
+  <td>GL</td>
   <td>~161</td>
   <td><a>Sign Up</a></td>
 </tr><tr>
@@ -1069,8 +1069,8 @@
                   </tr><tr>
   <td class="particulier">KENNE MANFOUO HECTOR</td>
   <td><img src="images/dollar.png" alt="Votre Logo">Standard Student</td>
-  <td>StageLink</td>
-  <td>StageLink</td>
+  <td>IUG</td>
+  <td>GL</td>
   <td>~148</td>
   <td><a>Sign Up</a></td>
 </tr><tr>
@@ -1545,8 +1545,8 @@
                             </tr><tr>
   <td class="particulier">MELI DOUANLA HILARY</td>
   <td><img src="images/dollar.png" alt="Votre Logo">Standard Student</td>
-  <td>StageLink</td>
-  <td>StageLink</td>
+  <td>GSI</td>
+  <td>IUG</td>
   <td>~130</td>
   <td><a>Sign Up</a></td>
 </tr><tr>
@@ -2322,8 +2322,8 @@
                   </tr><tr>
   <td class="particulier">TCHAMO DOUAKO HUGUES JUNIOR</td>
   <td><img src="images/dollar.png" alt="Votre Logo">Standard Student</td>
-  <td>StageLink</td>
-  <td>StageLink</td>
+  <td>IUG</td>
+  <td>GL</td>
   <td>~167</td>
   <td><a>Sign Up</a></td>
 </tr><tr>
