site avec video intro

--- a/index.html
+++ b/index.html
@@ -6,6 +6,26 @@
       <link rel="stylesheet" href="style.css">
     </head>
     <body>
+
+
+
+
+
+
+ <!-- Overlay vidéo -->
+    <div id="video-overlay">
+        <video id="intro-video" preload="auto"  playsinline>
+            <source src="images/test.mp4" type="video/mp4">
+            Votre navigateur ne supporte pas la lecture vidéo.
+        </video>
+        <button id="skip-btn">Passer</button>
+        <button id="play-btn" class="hidden">▶ Lancer la vidéo</button>
+    </div>
+
+ 
+
+
+
       <div id="rideau-intro">
         <div id="options">
           <div id="level1"><button id="bl1">STAGELINK L1</button></div>
