mise à jour des infos de StageLink

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <div id="control-level" class="fixed-button"><button id="optl1">stagelink l1 </button> <button id="optl3">stagelink
           l3</button></div>
       <marquee> Bienvenue au programme StageLink L3. Le programme d'immersion dans le monde professionnel. Vous 
-        demarrerez lundi le 14 Juillet 2025. MAXIMUM D'EXPERIENCE A TOUS !
+        demarrerezla phase préparatoire lundi le 24 Novembre 2025. MAXIMUM D'EXPERIENCE A TOUS !
       </marquee>
       <section class="page" id="page1">
         <div id="presentation">
@@ -56,7 +56,7 @@
               par eux-même de la boucle de l'inemployabilité.
               <br> Incompétence -&gt; Manque de Stage -&gt; Manque d'expérience -&gt; Chomage -&gt; Incompétence
               <br> <b>Pour continuer à exister et à se developper afin de mieux aider, StageLink à toujours eu besoin de
-                soutien. Tout les étudiants sélectionnés au programme doivent soutenir à hauteur de 25 000 FCFA. Et bénéficier
+                soutien. Tout les étudiants sélectionnés au programme doivent soutenir à hauteur de 27 500 FCFA. Et bénéficier
                 des avantages suivants:
               </b>
               <ol><b>
@@ -75,8 +75,8 @@
             <div class="about" id="aboutl3">
              <b>Chers parents,</b>
               <br><b>StageLink</b> est un ensemble d'entreprises (30) qui ont pour but d'encadrer les jeunes étudiants les plus motivés à avoir un ensemble d'outils indispensables pour le monde professionnel, à savoir : les compétences réellement recherchées par les employeurs, la culture d'entreprises, les techniques d'intégration ...
-              <br> En cette année 2025, le programme se donne l'objectif de donner un <b>contrat de travail (CDD)</b> à 50 étudiants les plus talentueux dans les entreprises partenaires et vise à en faire davantage au fil du temps.
-              <br> Mais pour garantir une progression permanente dans le temps, le programme nécessite néanmoins quelques fonds dont le soutien des profils sélectionnés aidera à alléger certains coûts. Les profils devront contribuer à hauteur de <b>45 000 FCFA</b> pour bénéficier des avantages suivants :
+              <br> En cette année 2026, le programme se donne l'objectif de donner un <b>contrat de travail (CDD)</b> à 10 étudiants les plus talentueux dans les entreprises partenaires et les 20 autres seront mis dans la zone delta pour un recrutement ultérieur. Nous visons à en faire davantage au fil du temps.
+              <br> Mais pour garantir une progression permanente dans le temps gerer les cout de la formation associée, le programme nécessite néanmoins quelques fonds dont le soutien des profils sélectionnés aidera à alléger certains coûts. Les profils devront contribuer à hauteur de <b>50 000 FCFA</b> pour bénéficier des avantages suivants :
               <ol>
                   <li>Formation pratique (3 mois)</li>
                   <li>Stage (3 mois)</li>
@@ -86,13 +86,8 @@
                   <li>Soutenance pour la promotion des compétences</li>
                   <li>Assistance rapport pour l'épreuve de licence</li>
               </ol>
-              <br> La contribution des profils sera gérée comme suit :
-              <ul>
-                  <li>Inscription : 10 000 FCFA</li>
-                  <li>Formation pratique : 20 000 FCFA</li>
-                  <li>Frais de concours pour la zone delta : 15 000 FCFA</li>
-              </ul>
-              <br> <b>NB :</b> Le programme StageLink met les étudiants sur le chemin, mais c'est à l'étudiant que revient la responsabilité de se démarquer !
+             
+              <br> <b>NB :</b> Le programme StageLink met les étudiants sur le chemin, mais c'est à l'étudiant que revient la responsabilité de se démarquer à travers ses efforts!
             </div>
             <div class="boutons">
               <a class="bouton">Back</a> 
@@ -4168,3 +4163,4 @@
 
 
 </body></html>
+
