--- a/index.html
+++ b/index.html
@@ -55,16 +55,12 @@
               motivés à croitre en compétence et surtout leur permettre d'intégrer progressivement notre réseau afin de sortir
               par eux-même de la boucle de l'inemployabilité.
               <br> Incompétence -&gt; Manque de Stage -&gt; Manque d'expérience -&gt; Chomage -&gt; Incompétence
-              <br> <b>Pour continuer à exister et à se developper afin de mieux aider, StageLink à toujours eu besoin de
-                soutien. Tout les étudiants sélectionnés au programme doivent soutenir à hauteur de 27 500 FCFA. Et bénéficier
+              <br> <b>Pour continuer à exister et à se developper afin de mieux aider, StageLink a besoin de financement.Tous les étudiants sélectionnés au programme doivent soutenir à hauteur de 15 000 FCFA. Et bénéficier
                 des avantages suivants:
               </b>
               <ol><b>
                   <li>Formation pratique (2 mois)</li>
                   <li>Stage(2 mois)</li>
-                  <li>Visite des entreprises du métier</li>
-                  <li>Pré-soutenance</li>
-                  <li>Soutenance de fin</li>
                   <li>Assistance rapport pour le DUT ou BTS</li>
 
                 </b>
@@ -4163,4 +4159,5 @@
 
 
 </body></html>
+
 
