--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
               <ol><b>
                   <li>Formation pratique (2 mois)</li>
                   <li>Stage(2 mois)</li>
+                  <li>Attestation de stage</li>
                   <li>Assistance rapport pour le DUT ou BTS</li>
 
                 </b>
@@ -76,6 +77,7 @@
               <ol>
                   <li>Formation pratique (3 mois)</li>
                   <li>Stage (3 mois)</li>
+                  <li>Attestation de stage</li>
                   <li>Possibilité d'avoir un CDD</li>
                   <li>Une intégration progressive</li>
                   <li>Conseil des aînés pour devenir autonome</li>
@@ -4159,5 +4161,6 @@
 
 
 </body></html>
+
 
 
