--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               motivés à croitre en compétence et surtout leur permettre d'intégrer progressivement notre réseau afin de sortir
               par eux-même de la boucle de l'inemployabilité.
               <br> Incompétence -&gt; Manque de Stage -&gt; Manque d'expérience -&gt; Chomage -&gt; Incompétence
-              <br> <b>Pour continuer à exister et à se developper afin de mieux aider, StageLink a besoin de financement.Tous les étudiants sélectionnés au programme doivent soutenir à hauteur de 15 000 FCFA. Et bénéficier
+              <br> <b>Pour continuer à exister et à se developper afin de mieux aider, StageLink a besoin d'un financement de la part des étudiants pour gérer une partie des frais de formation qui y sont associés. C'est pour cela que tous les étudiants sélectionnés au programme doivent soutenir à hauteur de 15 000 FCFA. Et bénéficier
                 des avantages suivants:
               </b>
               <ol><b>
@@ -4161,6 +4161,7 @@
 
 
 </body></html>
+
 
 
 
